create: table tenant_regulations
